--- a/pom.xml/pom.xml
+++ b/pom.xml/pom.xml
@@ -1,83 +1,91 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.project.FredJod</groupId>
-  <artifactId>web-monitor</artifactId>
-  <version>0.0.1</version>
-  <properties>
-  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	 <maven.compiler.source>11</maven.compiler.source>
-	 <maven.compiler.target>11</maven.compiler.target>
-	 <jarName>${project.artifactId}-${project.version}</jarName>
-  </properties>
-  
-  	<dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.project.FredJod</groupId>
+	<artifactId>web-monitor</artifactId>
+	<version>0.0.2</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<jarName>${project.artifactId}-${project.version}</jarName>
+	</properties>
 
-	    <dependency>
-	        <groupId>org.junit.jupiter</groupId>
-	        <artifactId>junit-jupiter</artifactId>
-	        <version>5.8.2</version>
-	        <scope>test</scope>
-	    </dependency>
- 
-		 <dependency>
-		   <groupId>org.apache.logging.log4j</groupId>
-		   <artifactId>log4j-api</artifactId>
-		   <version>2.17.1</version>
-		 </dependency>
-		 
-		 <dependency>
-		   <groupId>org.apache.logging.log4j</groupId>
-		   <artifactId>log4j-core</artifactId>
-		   <version>2.17.1</version>
-		 </dependency>			
+	<dependencies>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.8.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.17.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+
 	</dependencies>
-  
-  	<build>
-  	    <resources>
-	      <resource>
-	        <directory>src/main/resources</directory>
-	        <excludes>
-	          <exclude>auth.properties</exclude>
-	        </excludes>
-	      </resource>
-	    </resources>
-  	
-  		<plugins>
-	  	  	<plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-surefire-plugin</artifactId>
-	            <version>2.22.2</version>
-	        </plugin>
-	        
-		<plugin>
-             <artifactId>maven-assembly-plugin</artifactId>
-             <executions>
-                 <execution>
-                      <phase>package</phase>
-                      <goals>
-                          <goal>single</goal>
-                      </goals>
-                  </execution>
-              </executions>
-              <configuration>
-                   <archive>
-                       <manifest>
-                             <mainClass>freemobile.MobilePlanMngt</mainClass>
-                             <addClasspath>true</addClasspath>
-                       </manifest>             
-	                    <manifestEntries>
-	                        <Class-Path>./conf/</Class-Path>
-	                    </manifestEntries>
-                   </archive>
-                   <descriptorRefs>
-                       <descriptorRef>jar-with-dependencies</descriptorRef>
-                  </descriptorRefs>
-             </configuration>
-     </plugin>
-	        
-	        
-	        
-	    </plugins>
-        
-  	</build>
+
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>auth.properties</exclude>
+				</excludes>
+			</resource>
+		</resources>
+
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>webmonitor.WebMonitorMain</mainClass>
+							<addClasspath>true</addClasspath>
+						</manifest>
+						<manifestEntries>
+							<Class-Path>./conf/</Class-Path>
+						</manifestEntries>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+	</build>
 </project>
